--- a/articulo.html
+++ b/articulo.html
@@ -7,6 +7,15 @@
     <title>Artículos - Productos/Servicios</title>
 </head>
 <body>
-    
+    <img src="img/CarView.jpg" alt="Imagen Portada" width="100%" height="400px">
+    <header>
+        <nav class="navbar">
+            <ul class="nav-list">
+                <li><a href="index.html">Inicio</a></li>
+                <li class="seleccionado"><a href="articulo.html">Artículo</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
