--- a/contacto.html
+++ b/contacto.html
@@ -5,8 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Contacto</title>
+
 </head>
 <body>
-    
+    <img src="img/CarView.jpg" alt="Imagen Portada" width="100%" height="400px">
+    <header>
+        <nav class="navbar">
+            <ul class="nav-list">
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="articulo.html">Artículo</a></li>
+                <li class="seleccionado"><a href="contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <div id="contenedorContacto">
+        <form action="">
+            <h2>Contacto</h2>
+            <input type="text" name="Nombre" placeholder="Nombre" required>
+            <input type="text" name="Apellido" placeholder="Apellido" required> <br>
+            <input type="email" name="Mail" placeholder="Mail" required>
+            <input type="tel" name="Telefono" placeholder="Telefono" required> <br>
+            <textarea name="Mensaje" placeholder="Mensaje"></textarea>
+        </form>
+    </div>
 </body>
 </html>
