--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap">
-    <style>
+    <style>        
         h2 {
             text-align: center;
             border-radius: 18px;
@@ -25,14 +25,33 @@
             text-decoration: underline;
             font-size: 22px;
         }
+
     </style>
+    <script src="script.js"></script>
 </head>
 
 <body>
 
-    <img src="img/CarView.jpg" alt="Imagen Portada" width="100%" height="400px">
     <header>
         <nav class="navbar">
+            <div id="mySidenav" class="sidenav">
+                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                <div class="dropdown">
+                    <a href="javascript:void(0)" class="dropbtn" onclick="toggleDropdown()">Inicio</a>
+                    <div class="dropdown-content">
+                       <lu><a href="#HistoriaAutomovil">Historia</a></lu>
+                       <lu><a href="#PrimerosPasos">Primeros Paso</a></lu>
+                       <lu><a href="#HenryFord">Henry Ford</a></lu> 
+                       <lu><a href="#Innovacion">Innovaciones</a></lu> 
+                       <lu><a href="#Marcas">Marcas Iconicas</a></lu> 
+                    </div>
+                </div>
+                <a href="articulo.html">Articulo</a>
+                <a href="contacto.html">Contacto</a>
+            </div>  
+
+                <span style="font-size:30px;cursor:pointer;position: fixed; left: 0;" onclick="openNav()">&#9776;</span>
+
             <ul class="nav-list">
                 <li class="seleccionado"><a href="index.html">Inicio</a></li>
                 <li><a href="articulo.html">Artículo</a></li>
@@ -40,6 +59,8 @@
             </ul>
         </nav>
     </header>
+    
+    <img src="img/CarView.jpg" alt="Imagen Portada" width="100%" height="400px">
 
     <div id="contenedorInicio">
         <div id="contenidoInicio">
@@ -202,7 +223,7 @@
             </ul>
             <div class="carrousel">
                 <div class="carousel-images">
-                    <img src="img/chevrolet.jpg" alt="Imagen 1" class="carousel-image active">
+                    <a href="articulo.html">  <img src="img/chevrolet.jpg" alt="Imagen 1" class="carousel-image active"> </a>
                     <img src="img/ferarri.jpg" alt="Imagen 2" class="carousel-image">
                     <img src="img/bmw.jpg" alt="Imagen 3" class="carousel-image">
                     <img src="img/lambo.jpg" alt="Imagen 6" class="carousel-image">
@@ -228,8 +249,6 @@
                 </ul>
         </div>
     </div>
-
-    <script src="script.js"></script>
 </body>
 
 </html>
