correcion  mySidenav de la pantalla Articulo
queda igual q la pagina principal y tenga la opción de poder acceder al mismo en cualquier posición.

--- a/articulo.html
+++ b/articulo.html
@@ -11,16 +11,29 @@
 
 <body>
     <header>
-        <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+     
+        <header>
+            <nav class="navbar">
+                <div id="mySidenav" class="sidenav">
+                    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="index.html">Inicio</a>
+        <a href="articulo.html" class="seleccionado">Artículo</a>
+        <a href="contacto.html">Contacto</a>
+                </div>  
+                    <span id="barraLateral" onclick="openNav()">&#9776;</span>
+            </nav>
+        </header>
     </header>
-
-    <div id="mySidenav" class="sidenav">
+    <img src="img/CarView.jpg" alt="Imagen Portada" width="100%" height="400px">
+<!--    <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="index.html">Inicio</a>
         <a href="articulo.html" class="seleccionado">Artículo</a>
         <a href="contacto.html">Contacto</a>
     </div>
     <img src="img/CarView.jpg" alt="Imagen Portada" width="100%" height="400px">
+-->
 
     <main>
         
