--- a/index.html
+++ b/index.html
@@ -220,16 +220,20 @@
     </div>
     <div class="carrousel">
         <div class="carousel-images">
-            <a href="articulo.html">  <img src="img/chevrolet.jpg" alt="Imagen 1" class="carousel-image active"> </a>
-            <img src="img/ferarri.jpg" alt="Imagen 2" class="carousel-image">
-            <img src="img/bmw.jpg" alt="Imagen 3" class="carousel-image">
-            <img src="img/lambo.jpg" alt="Imagen 6" class="carousel-image">
-            <img src="img/tesla.jpg" alt="Imagen 5" class="carousel-image">
-            <img src="img/peugeot.jpg" alt="Imagen 6" class="carousel-image">
-            <img src="img/porsche.jpg" alt="Imagen 7" class="carousel-image">
-            <img src="img/audi.jpg" alt="Imagen 8" class="carousel-image">
-            <img src="img/vw.jpg" alt="Imagen 9" class="carousel-image">
-            <img src="img/ford.jpg" alt="Imagen 10" class="carousel-image">
+            <a href="articulo.html#chevrolet"> <img src="img/chevrolet2.jpg" alt="Imagen 1" class="carousel-image active"> </a>
+            <a href="articulo.html#ferrari"> <img src="img/ferarri2.jpg" alt="Imagen 2" class="carousel-image"> </a>
+            <a href="articulo.html#bmw"> <img src="img/bmw2.jpg" alt="Imagen 3" class="carousel-image"> </a>
+            <a href="articulo.html#lambo"> <img src="img/lambo2.jpg" alt="Imagen 4" class="carousel-image"> </a>
+            <a href="articulo.html#tesla"> <img src="img/tesla2.jpg" alt="Imagen 5" class="carousel-image"> </a>
+            <a href="articulo.html#peugeot"> <img src="img/peugeot2.jpg" alt="Imagen 6" class="carousel-image"> </a>
+            <a href="articulo.html#porsche"> <img src="img/porsche.jpg" alt="Imagen 7" class="carousel-image"> </a>
+            <a href="articulo.html#audi"> <img src="img/audi.jpg" alt="Imagen 8" class="carousel-image"> </a>
+            <a href="articulo.html#volkswagwen"> <img src="img/vw2.jpg" alt="Imagen 9" class="carousel-image"> </a>
+            <a href="articulo.html#ford"> <img src="img/ford2.jpg" alt="Imagen 10" class="carousel-image"> </a>
+            <a href="articulo.html#mercedes"> <img src="img/Mercedes.jpg" alt="Imagen 11" class="carousel-image"> </a>
+            <a href="articulo.html#toyota"> <img src="img/toyota.jpg" alt="Imagen 12" class="carousel-image"> </a>
+            <a href="articulo.html#fiat"> <img src="img/fiat.jpg" alt="Imagen 13" class="carousel-image"> </a>
+
         </div>
         <button class="carousel-button prev" onclick="moveSlide(-1)">&#10094;</button>
         <button class="carousel-button next" onclick="moveSlide(1)">&#10095;</button>
