Estilo del formulario contacto

--- a/articulo.html
+++ b/articulo.html
@@ -6,22 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Artículo - Chevrolet</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap">
     <script src="script.js" defer></script>
 </head>
 
 <body>
     <header>
-     
+    
         <header>
             <nav class="navbar">
                 <div id="mySidenav" class="sidenav">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="index.html">Inicio</a>
-        <a href="articulo.html" class="seleccionado">Artículo</a>
-        <a href="contacto.html">Contacto</a>
-                </div>  
-                    <span id="barraLateral" onclick="openNav()">&#9776;</span>
+                    <a href="index.html">Inicio</a>
+                    <a href="articulo.html">Artículo</a>
+                    <a href="contacto.html">Contacto</a>
+                </div>
+                <span id="barraLateral" onclick="openNav()">&#9776;</span>
             </nav>
         </header>
     </header>
