--- a/contacto.html
+++ b/contacto.html
@@ -1,35 +1,141 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap">
     <title>Contacto</title>
+    <style>
+        * {
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+            outline: none;
+        }
 
+        a {
+            color: inherit;
+        }
+
+        input,
+        select,
+        textarea,
+        button {
+            font-family: inherit;
+            font-size: 100%;
+        }
+
+        button,
+        label {
+            cursor: pointer;
+        }
+
+        textarea {
+            resize: none;
+        }
+
+        ul {
+            list-style: none;
+        }
+
+        body {
+            font: 18px/1.5 "Open Sans", sans-serif;
+            background: #292a2b;
+            color: #afafaf;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 50px auto;
+            padding: 0 1.5rem;
+        }
+
+        @media screen and (min-width: 600px) {
+            #Formulario .grid {
+                display: grid;
+                grid-gap: 1.5rem;
+            }
+
+            #Formulario .grid-2 {
+                grid-template-columns: 1fr 1fr;
+            }
+
+            #Formulario .grid-3 {
+                grid-template-columns: auto auto auto;
+                align-items: center;
+            }
+
+            #Formulario .grid>*:not(:last-child) {
+                margin-bottom: 0;
+            }
+
+            #Formulario .requerido {
+                display: block;
+            }
+        }
+        
+    </style>
+    <script src="script.js" defer></script>
 </head>
+
 <body>
-    <img src="img/CarView.jpg" alt="Imagen Portada" width="100%" height="400px">
     <header>
-        <nav class="navbar">
-            <ul class="nav-list">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="articulo.html">Artículo</a></li>
-                <li class="seleccionado"><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+
+        <header>
+            <nav class="navbar">
+                <div id="mySidenav" class="sidenav">
+                    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                    <a href="index.html">Inicio</a>
+                    <a href="articulo.html">Artículo</a>
+                    <a href="contacto.html">Contacto</a>
+                </div>
+                <span id="barraLateral" onclick="openNav()">&#9776;</span>
+            </nav>
+        </header>
     </header>
 
-    <div id="contenedorContacto">
-        <form action="">
-            <h2>Contacto</h2>
-            <input type="text" name="Nombre" placeholder="Nombre" required>
-            <input type="text" name="Apellido" placeholder="Apellido" required> <br>
-            <input type="email" name="Mail" placeholder="Mail" required>
-            <input type="tel" name="Telefono" placeholder="Telefono" required> <br>
-            <textarea name="Mensaje" placeholder="Mensaje"></textarea>
-        </form>
-    </div>
+    <img src="img/CarView.jpg" alt="Imagen Portada" width="100%" height="400px">
+
+    <form id="Formulario">
+        <div class="container">
+            <h1>¡Ponte en Contacto!</h1>
+            <ul>
+                <li>
+                    <div class="grid grid-2">
+                        <input type="text" placeholder="Nombre" required>
+                        <input type="text" placeholder="Apellido" required>
+                    </div>
+                </li>
+                <li>
+                    <div class="grid grid-2">
+                        <input type="email" placeholder="Email" required>
+                        <input type="tel" placeholder="Telefono">
+                    </div>
+                </li>
+                <li>
+                    <textarea placeholder="Mensaje"></textarea>
+                </li>
+                <li>
+                    <input type="checkbox" id="terminos">
+                    <label for="terminos">He leído y estoy de acuerdo con <a href="">los términos y
+                            condiciones.</a></label>
+                </li>
+                <li>
+                    <div class="grid grid-3">
+                        <div class="requerido">CAMPOS REQUERIDOS</div>
+                        <button class="boton-grid" type="submit" disabled>ENVIAR</button>
+                        <button class="boton-grid" type="reset" disabled>RESTABLECER</button>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </form>
 </body>
+
 </html>
-
-
