--- a/contacto.html
+++ b/contacto.html
@@ -78,6 +78,11 @@
                 display: block;
             }
         }
+        .mensaje-validacion {
+    color: red; /* Color para mensajes de error */
+    font-size: 0.9em; /* Tamaño de fuente más pequeño */
+    margin-top: 0.5rem; /* Espacio entre el input y el mensaje */
+}
         
     </style>
     <script src="script.js" defer></script>
@@ -108,14 +113,29 @@
             <ul>
                 <li>
                     <div class="grid grid-2">
-                        <input type="text" placeholder="Nombre" required>
-                        <input type="text" placeholder="Apellido" required>
+                        <div>
+                            <input id="nombre" type="text" placeholder="Nombre*" >
+                            <div class="mensaje-validacion" id="mensaje-nombre"></div>
+                        </div>
+                        <div>
+                            <input id="apellido" type="text" placeholder="Apellido*" >
+                            <div class="mensaje-validacion" id="mensaje-apellido"></div>
+                        </div>
                     </div>
                 </li>
                 <li>
                     <div class="grid grid-2">
-                        <input type="email" placeholder="Email" required>
-                        <input type="tel" placeholder="Telefono">
+
+                        <div>
+                            <input id="email" type="text" placeholder="Email*" >
+                            <div class="mensaje-validacion" id="mensaje-email"></div>
+                        </div>
+                        <div>
+                            <input id="telefono" type="text" placeholder="Telefono" >
+                            <div class="mensaje-validacion" id="mensaje-telefono"></div>
+                        </div>  
+
+
                     </div>
                 </li>
                 <li>
