--- a/contacto.html
+++ b/contacto.html
@@ -78,31 +78,46 @@
                 display: block;
             }
         }
+
         .mensaje-validacion {
-    color: red; /* Color para mensajes de error */
-    font-size: 0.9em; /* Tamaño de fuente más pequeño */
-    margin-top: 0.5rem; /* Espacio entre el input y el mensaje */
+            color: red; /* Color para mensajes de error */
+            font-size: 0.9em; /* Tamaño de fuente más pequeño */
+            margin-top: 0.5rem; /* Espacio entre el input y el mensaje */
+        }
+     .resultado {
+    margin-top: 50px;
+    padding: 15px;
+    background-color: #292a2b; /*  fondo suave */
+    border: 1px solid #ddd; 
+    border-radius: 5px; /* Bordes redondeados */
+    color: #f3ecec; /* texto */
 }
-        
+
+.resultado h2 {
+    font-size: 1.5em;
+    margin-bottom: 10px;
+}
+
+.resultado p {
+    margin: 5px 0; /* Espacio entre párrafos */
+}
+
     </style>
     <script src="script.js" defer></script>
 </head>
 
 <body>
     <header>
-
-        <header>
-            <nav class="navbar">
-                <div id="mySidenav" class="sidenav">
-                    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                    <a href="index.html">Inicio</a>
-                    <a href="articulo.html">Artículo</a>
-                    <a href="contacto.html">Contacto</a>
-                </div>
-                <span id="barraLateral" onclick="openNav()">&#9776;</span>
-            </nav>
-        </header>
+        <nav class="navbar">
+            <div id="mySidenav" class="sidenav">
+                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                <a href="index.html">Inicio</a>
+                <a href="articulo.html">Artículo</a>
+                <a href="contacto.html">Contacto</a>
+            </div>
+            <span id="barraLateral" onclick="openNav()">&#9776;</span>
+        </nav>
     </header>
 
     <img src="img/CarView.jpg" alt="Imagen Portada" width="100%" height="400px">
@@ -125,7 +140,6 @@
                 </li>
                 <li>
                     <div class="grid grid-2">
-
                         <div>
                             <input id="email" type="text" placeholder="Email*" >
                             <div class="mensaje-validacion" id="mensaje-email"></div>
@@ -134,8 +148,6 @@
                             <input id="telefono" type="text" placeholder="Telefono" >
                             <div class="mensaje-validacion" id="mensaje-telefono"></div>
                         </div>  
-
-
                     </div>
                 </li>
                 <li>
@@ -143,8 +155,7 @@
                 </li>
                 <li>
                     <input type="checkbox" id="terminos">
-                    <label for="terminos">He leído y estoy de acuerdo con <a href="">los términos y
-                            condiciones.</a></label>
+                    <label for="terminos">He leído y estoy de acuerdo con <a href="">los términos y condiciones.</a></label>
                 </li>
                 <li>
                     <div class="grid grid-3">
@@ -156,6 +167,9 @@
             </ul>
         </div>
     </form>
+
+    
+    <div id="resultado" class="resultado"></div>
 </body>
 
 </html>
