--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap">
+    <link rel="icon" href="img/favicon_corrected_64x64.png" type="image/png">
     <style>
             
         h2 {
@@ -238,6 +239,21 @@
         <button class="carousel-button prev" onclick="moveSlide(-1)">&#10094;</button>
         <button class="carousel-button next" onclick="moveSlide(1)">&#10095;</button>
     </div>
+    <footer>
+        <div>
+          <p>© 2024 Carview. Todos los derechos reservados.</p>
+          <ul>
+            <li><a href="">Política de Privacidad</a></li>
+            <li><a href="">Términos y Condiciones</a></li>
+            <li><a href="/contacto.html">Contacto</a></li>
+          </ul>
+          <div class="Redes-sociales">
+            <a href="">Facebook</a>
+            <a href="">Twitter</a>
+            <a href="">Instagram</a>
+          </div>
+        </div>
+      </footer>
 </body>
 
 </html>
