validacion en campo telefono y agregar los valoles ingresados en campo mensaje

--- a/contacto.html
+++ b/contacto.html
@@ -130,7 +130,7 @@
                     </div>
                 </li>
                 <li>
-                    <textarea placeholder="Mensaje"></textarea>
+                    <textarea id="mensaje" placeholder="Mensaje"></textarea>
                 </li>
                 <li>
                     <input type="checkbox" id="terminos">
